# tesis_ws

./: .gitignore  README.md  contributors.txt
multiagentes/: CMakeLists.txt  package.xml
multiagentes/cfg/: costmap_common_params.yaml~  dwa_local_planner_params.yaml  rviz_navigation.rviz~
multiagentes/cfg/rviz/: rviz_map_teleo.rviz  rviz_navigation.rviz
multiagentes/launch/: goals.launch  multiagent_nav.launch
multiagentes/stage/: multi-agent.world
multiagentes/stage/include/: bigbob.inc  map.inc
planner/relaxed_astar/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  relaxed_astar_planner_plugin.xml~
planner/rrt_planner/: package.xml~
robot_nodes/: CMakeLists.txt  package.xml
robot_nodes/launch/: minimal_bot.launch  minimal_kob.launch  move_basebot.launch  move_map.launch
robot_nodes/maps/: mapcasant.yaml
simulacion/: CMakeLists.txt  package.xml  package.xml~
simulacion/cfg/: costmap_common_params.yaml  teb_local_planner_params.yaml
simulacion/launch/: Global_DWA.launch  Global_TEB.launch  Potential_DWA.launch  Potential_TEB.launch  RAstar_DWA.launch  RAstar_TEB.launch  RRT_DWA.launch  RRT_TEB.launch  amcl_planner.launch~  diff_teb.launch~  framework_planners.launch  map.launch~  map_teleop.launch~
simulacion/maps/: empty_box.yaml  empty_box.yaml~  lab.yaml  lab.yaml~  mapcasant.pgm  mapcasant.yaml
simulacion/scripts/: waypoints.py
simulacion/stage/: empty_box.world  empty_box.world~  lab.world  lab.world~
tesis_nodes/: CMakeLists.txt  package.xml
tesis_nodes/scripts/: btnBase.py  savenode.py  waypoints.py
(+3 files in other folders)
