<?xml version="1.0"?>
<package format="2">

	<name>multiagentes</name>
	<version>0.1.0</version>
 	<description>The multiagentes package</description>

	<maintainer email="sjimenez@todo.todo">sjimenez</maintainer>
	<author email="sjimenez@todo.todo">sjimenez</author>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>actionlib</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>tf</build_depend>

	<exec_depend>actionlib</exec_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>tf</exec_depend>

	<export>

	</export>

</package>
